<resources>
    <string name="app_name">Health</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_type_child">0</string>
    <string name="user_type_lady">1</string>
    <string name="user_type_older">2</string>
    <string name="user_type_normal">3</string>
    <string name="user_type_gravida">4</string>
    <string name="ok">确认</string>
    <string name="personer">普通</string>
    <string name="child">小孩</string>
    <string name="lady">妇女</string>
    <string name="older">老人</string>
    <string name="example_name">姓名：武汉大学</string>
    <string name="example_phone">手机号：(027)6875423168754826</string>
    <string name="fun_devicesel">设备重置</string>
    <string name="fun_personersel">角色选择</string>
    <string name="fun_logout">注销</string>
    <string name="fun_tag">&gt;</string>
    <string name="title_login">健康</string>
    <string name="title_back">&lt;返回</string>
    <string name="title_regeist">注册</string>
    <string name="title_validno">发送验证码</string>
    <string name="title_regeist_click">点击注册</string>
    <string name="title_tab1">测量</string>
    <string name="title_tab2">数据</string>
    <string name="title_tab3">个人</string>
    <string name="title_tab4">圈子</string>
    <string name="title_personersel">选择你的角色</string>
    <string name="hint_no">请输入账号</string>
    <string name="hint_regeist_phone">请输入需要注册的手机号</string>
    <string name="hint_psw">请输入密码</string>
    <string name="hint_valid">请输入验证码</string>
    <string name="login">登录</string>
    <string name="tab1">测量</string>
    <string name="tab2">数据</string>
    <string name="tab3">个人</string>
    <string name="tab4">论坛</string>
    <string name="view_data_history">查看历史数据</string>
    <string name="test_xidian">心电测量</string>
    <string name="test_xueyang">血氧测量</string>
    <string name="test_xueya">血压测量</string>
    <string name="test_tiwen">体温测量</string>
    <string name="test_mio_xinlv">mio心率测量</string>
    <string name="test_mio_sleep">mio睡眠监测</string>
    <string name="test_mio_step">mio运动监测</string>
    <string name="test_height">身高体重测量</string>
    <string name="test_weight">孕妇体重测量</string>
    <string name="test_xtxz">血糖血脂测量</string>
    <string name="data_xidian">心电数据</string>
    <string name="data_xueyang">血氧数据</string>
    <string name="data_xueya">血压数据</string>
    <string name="data_tiwen">体温数据</string>
    <string name="data_height">身高体重数据</string>
    <string name="data_weight">孕妇体重数据</string>
    <string name="data_xtxz">血糖血脂数据</string>
    <string name="tip">提示</string>
    <string name="tip_sendValid">正在发送验证码，请稍后...</string>
    <string name="tip_regeist">正在注册，请稍后...</string>
    <string name="tip_phone_error">请输入11位的手机号</string>
    <string name="tip_password_error">密码以字母开头，长度在6~18之间，只能包含字符、数字和下划线</string>
    <string name="tip_valid_none">请输入验证码</string>
    <string name="tip_valid_error">验证码错误</string>
    <string name="tip_child_height">请输入小孩身高(CM)</string>
    <string name="tip_child_weight">请输入小孩体重(KG)</string>
    <string name="tip_child_error">请输入正确的身高和体重</string>
    <string name="tip_child_testdate">请输入小孩测量日期</string>
    <string name="tip_nodevice">未连接蓝牙设备</string>
    <string name="tip_lady_weight">请输入您的体重(KG)</string>
    <string name="tip_lady_error">请输入正确的体重</string>
    <string name="tip_older_xt">请输入血糖值</string>
    <string name="tip_older_xz">请输入血脂值</string>
    <string name="sendValidAgain">再次发送验证码</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="apk_name">jqb</string>
    <string name="action_settings">设置</string>
    <string name="bluetoothon">开启蓝牙</string>
    <string name="bluetoothoff">关闭蓝牙</string>
    <string name="bluetoothstatus">蓝牙状态</string>
    <string name="getbluetoothmac">蓝牙匹配</string>
    <string name="devicestatus">仪器状态</string>
    <string name="confirmsave">确认保存</string>
    <string name="confirmsave1">确认保存并输出健康建议</string>
    <string name="highbloodpressure">收缩压</string>
    <string name="lowbloodpressure">舒张压</string>
    <string name="date">日期</string>
    <string name="healthscore">0</string>
    <string name="oxygenscore">0%</string>
    <string name="bloodpressurescore">0mmHg</string>
    <string name="historicaldata">历史数据</string>
    <string name="inputhealthdata">请输入健康数据</string>
    <string name="inputhealthdataq">无健康数据分享</string>
    <string name="status1">正常</string>
    <string name="bloodpressure">血压</string>
    <string name="bloodpressurenow">袖带压力</string>
    <string name="bloodpressurenow2">袖带压：</string>
    <string name="oxygen">血氧</string>
    <string name="breath">呼吸</string>
    <string name="heartrate">心率</string>
    <string name="temperature">体温</string>
    <string name="pulse">脉率</string>
    <string name="avgpressure">平均压</string>
    <string name="height">身高</string>
    <string name="bloodsugar">血糖</string>
    <string name="weight">体重</string>
    <string name="ecg">心电图</string>
    <string name="bmi">BMI</string>
    <string name="photo">头像</string>
    <string name="emergency">紧急呼叫</string>
    <string name="daytime">现在是</string>
    <string name="title_activity_show_curve">健康曲线</string>
    <string name="listviewHead1">低压</string>
    <string name="product">健亲宝 0.0.1 (Android) </string>
    <string name="about">清易云康 版权所有\nCopyright @2015&#8211;2020 All Rights Reserved </string>
    <string name="terms">申明：\n此版本适用于Android系列设备，如在其他品牌或型号上的设备上使用本软件，对于出现的任何问题，我公司不承担责任。本软件的下载、安装完全免费，使用过程中产生的数量流量费用，由运营商收取。\n\n详情请致电400&#8211;665&#8211;9699。 \n\n免责声明：\n此版本所获取生命体征信息和健康建议仅供参考，请勿用于临床诊断。</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_help_setting">求助参数设置</string>
    <string name="buttonok">确定</string>
    <string name="buttoncancel">取消</string>
    <string name="confirmdelete">确定删除？</string>
    <string name="alert_phone_number">请设置应急电话号码</string>
    <string name="gotopage">去往</string>
    <string name="input">输入</string>
    <string name="collect">采集</string>
    <string name="consult">建议</string>
    <string name="share_healthdata">分享健康</string>
    <string name="icon">图标</string>
    <string name="blankstring"></string>
    <string name="title_activity_doctor_suggestion">健康建议</string>
    <string name="title_activity_history">历史</string>
    <string name="healthstatus">健康状态</string>
    <string name="sound">语音提示</string>
    <string name="clickhere">点击评分</string>
    <string name="hintusername">用户名</string>
    <string name="username1">用户名:</string>
    <string name="hintpasswd1">密码</string>
    <string name="hintpasswd2">验证密码</string>
    <string name="action_add">注册</string>
    <string name="register">新用户注册</string>
    <string name="userset">用户设置</string>
    <string name="userinfo">用户信息</string>
    <string name="cancel">注销</string>
    <string name="tab1_test">仪器</string>
    <string name="tab2_history">历史</string>
    <string name="tab3_mine">我的</string>
    <string name="time">时间</string>
    <string name="tab1_devicealert">您现在使用的是体验版，无法自动采集健康数据。\n如果需要正式版，请联系我们。\n热线电话：400&#8211;665&#8211;9699！</string>
    <string name="myhealthis">健康动态：</string>
    <string name="the">第</string>
    <string name="page">页</string>
    <string name="loginuser">当前用户：&#8211;&#8211;</string>
    <string name="drawingsettings">绘图参数</string>
    <string name="clearalldata">清空数据</string>
    <string name="alreadylogin1">当前用户:</string>
    <string name="alreadylogin3">当前用户</string>
    <string name="setsound">语音播报</string>
    <string name="setwifi">Wifi下自动上传</string>
    <string name="set4g3d">3G/4G下自动上传</string>
    <string name="alreadylogin2"></string>
    <string name="inviteuse">邀请您使用健亲宝:http://wocaring.cn/downloads/jqb.apk。</string>
    <string name="recommendmenu">推荐</string>
    <string name="minutescore">分</string>
    <string name="doctorsuggestiontitle">健康建议</string>
    <string name="pleasewait">请等待，正在生成健康建议......</string>
    <string name="total">共</string>
    <string name="dataitems">条数据，合计</string>
    <string name="inputuserinfo">用户登录</string>
    <string name="successfullogin">登录成功</string>
    <string name="successfuluserinfo">修改个人信息成功</string>
    <string name="usererror">用户名或登录名错误！</string>
    <string name="userInfoerror">修改失败！</string>
    <string name="inputregisterinfo">用户注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="usernotempty">用户名不能为空！</string>
    <string name="reget2">获取验证码</string>
    <string name="reget1">重新获取</string>
    <string name="reget">请输入验证码</string>
    <string name="userisiphone">请输入手机号！</string>
    <string name="userisnoiphone">手机号不正确！</string>
    <string name="passwdnotsame">两次输入密码不同！</string>
    <string name="yanzhengerror">请输入验证码！</string>
    <string name="successfulregistration">注册成功！</string>
    <string name="userexists">用户已存在！</string>
    <string name="confirmclearall">确认清空全部数据吗？</string>
    <string name="updateby3g">当前为非Wifi模式，是否上传数据？</string>
    <string name="todayis">今天是</string>
    <string name="isexcellent">您的健康状态非常好。</string>
    <string name="isgood">您的健康状态良好。</string>
    <string name="isnormal">您的健康状态马马虎虎......</string>
    <string name="isbad">您应该马上去看医生了！</string>
    <string name="hintheight">cm</string>
    <string name="hintnoinput">提示:未变参数无需重复输入</string>
    <string name="hintweight">kg</string>
    <string name="hinttemperature">36&#8211;37.5C</string>
    <string name="hintheartrate">60&#8211;100/min</string>
    <string name="hintbreath">12&#8211;20/min</string>
    <string name="hintoxygen">>95%</string>
    <string name="hinthbp">90&#8211;140mmHg</string>
    <string name="hintlbp">60&#8211;90mmHg</string>
    <string name="hintbs">3.9&#8211;6.1mmol/l</string>
    <string name="hintweightmax">体重坐标上限</string>
    <string name="hintweightmin">体重坐标下限</string>
    <string name="hintoxygenmax">血氧坐标上限</string>
    <string name="hintoxygenmin">血氧坐标下限</string>
    <string name="hintbreathmax">呼吸坐标上限</string>
    <string name="hintbreathmin">呼吸坐标下限</string>
    <string name="hinttemperaturemax">体温坐标上限</string>
    <string name="hinttemperaturemin">体温坐标下限</string>
    <string name="hintheartratemax">心率坐标上限</string>
    <string name="hintheartratemin">心率坐标下限</string>
</resources>