<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/theme_green"
        android:paddingLeft="@dimen/app_title_padding_lr"
        android:paddingRight="@dimen/app_title_padding_lr">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_xtxz"
            android:layout_centerInParent="true"
            android:textSize="@dimen/app_title_size"
            android:textColor="@color/white"/>


        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:background="@color/transparent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="onClick"/>


    </RelativeLayout>


    <EditText
        android:id="@+id/et_xt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/tip_older_xt"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/et_xz"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/tip_older_xz"
        android:inputType="numberDecimal"/>

    <DatePicker
        android:id="@+id/dp_date"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:headerBackground="@color/theme_green">
    </DatePicker>
    







</LinearLayout>