<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.personer.LoginActivity">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/theme_green"
        android:paddingLeft="@dimen/app_title_padding_lr"
        android:paddingRight="@dimen/app_title_padding_lr">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/title_login"
            android:textColor="@color/text_title"
            android:textSize="@dimen/app_title_size" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/title_back"
            android:textColor="@color/text_title_left" />


        <TextView
            android:id="@+id/tv_regeist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/title_regeist"
            android:textColor="@color/text_title_left" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_title"
        android:paddingLeft="@dimen/app_padding_lr"
        android:paddingRight="@dimen/app_padding_lr">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="正在登录……"
                android:visibility="gone"
                android:textColor="@color/black" />



            <com.hubu.fan.view.ClearEditText
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_no"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:nextFocusForward="@+id/tv_password" />

            <com.hubu.fan.view.ClearEditText
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_psw"
                android:imeOptions="actionGo"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/theme_green"
                android:onClick="onClick"
                android:text="@string/login"
                android:textColor="@color/text_login" />


        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>