<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/theme_color"
        android:paddingLeft="@dimen/app_title_padding_lr"
        android:paddingRight="@dimen/app_title_padding_lr"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_personersel"
            android:layout_centerInParent="true"
            android:textSize="@dimen/app_title_size"
            android:textColor="@color/text_title"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/personer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="onClick">

            <com.hubu.fan.view.imageview.CircleImageView
                android:id="@+id/civ_personer"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/personer"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/civ_personer"
                android:text="@string/personer"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/child"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="onClick">

            <com.hubu.fan.view.imageview.CircleImageView
                android:id="@+id/civ_child"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/child"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/civ_child"
                android:text="@string/child"/>


        </RelativeLayout>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/lady"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="onClick">

            <com.hubu.fan.view.imageview.CircleImageView
                android:id="@+id/civ_lady"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/lady"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/civ_lady"
                android:text="@string/lady"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/older"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:onClick="onClick">
            <com.hubu.fan.view.imageview.CircleImageView
                android:id="@+id/civ_older"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/older"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/civ_older"
                android:text="@string/older"/>
        </RelativeLayout>

    </LinearLayout>



</LinearLayout>
